<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/goals">

        <EditTextPreference
            app:key="daily_goal"
            app:title="@string/daily_goal" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/advanced">

        <EditTextPreference
            app:key="step_length"
            app:title="@string/step_length" />

        <EditTextPreference
            app:key="height"
            app:title="@string/height" />

        <EditTextPreference
            app:key="weight"
            app:title="@string/weight" />

        <ListPreference
            app:key="pace"
            app:title="@string/pace" />

    </PreferenceCategory>

</PreferenceScreen>