<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_progress">

    <fragment
        android:id="@+id/fragment_forest"
        android:name="pl.bk20.forest.trees.ForestFragment"
        android:label="@string/forest"
        tools:layout="@layout/fragment_forest" />

    <fragment
        android:id="@+id/fragment_progress"
        android:name="pl.bk20.forest.progress.ProgressFragment"
        android:label="@string/tree"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/fragment_stats"
        android:name="pl.bk20.forest.stats.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />

</navigation>