<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".core.presentation.ActivityRecognitionPermissionFragment">

    <ImageView
        android:id="@+id/image_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:importantForAccessibility="no"
        android:src="@drawable/directions_walk_fill0_wght400_grad0_opsz48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/text_permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/allow_activity_recognition"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_walk" />

    <TextView
        android:id="@+id/text_permission_rationale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/activity_recognition_rationale"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_permission_title" />

    <ImageView
        android:id="@+id/icon_revoke_permission"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="38dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_permission_rationale"
        app:srcCompat="@drawable/do_not_disturb_on_fill0_wght400_grad0_opsz24"
        app:tint="?android:textColorPrimary" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/revoke_permission_rationale"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_revoke_permission"
        app:layout_constraintTop_toTopOf="@+id/icon_revoke_permission" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/data_consent"
        android:textAppearance="?attr/textAppearanceBodySmall"
        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>