<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="24dp"
    tools:context=".presentation.StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layoutDirection="rtl"
            tools:background="?attr/colorSurfaceVariant" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageButton
                android:id="@+id/button_previous_day"
                style="@style/Widget.Material3.Button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/previous_day"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/chevron_left_fill0_wght400_grad0_opsz24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Fri, 12 Jun" />

            <ImageButton
                android:id="@+id/button_next_day"
                style="@style/Widget.Material3.Button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next_day"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/chevron_right_fill0_wght400_grad0_opsz24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:cardBackgroundColor="?attr/colorSecondaryContainer"
            app:cardCornerRadius="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/shape_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="18dp">

                    <View
                        android:id="@+id/view_step_background"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/shape_circle"
                        android:backgroundTint="?attr/colorSecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="@+id/view_step_background"
                        app:layout_constraintEnd_toEndOf="@+id/view_step_background"
                        app:layout_constraintStart_toStartOf="@+id/view_step_background"
                        app:layout_constraintTop_toTopOf="@+id/view_step_background"
                        app:srcCompat="@drawable/steps_fill0_wght400_grad0_opsz24"
                        app:tint="?attr/colorOnSecondary" />

                    <TextView
                        android:id="@+id/text_step_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="2dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintBottom_toTopOf="@+id/text_step_count_label"
                        app:layout_constraintStart_toEndOf="@+id/view_step_background"
                        app:layout_constraintTop_toTopOf="@+id/view_step_background"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="6500 steps" />

                    <TextView
                        android:id="@+id/text_step_count_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/step_count"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        app:layout_constraintBottom_toBottomOf="@+id/view_step_background"
                        app:layout_constraintStart_toStartOf="@+id/text_step_count"
                        app:layout_constraintTop_toBottomOf="@+id/text_step_count"
                        app:layout_constraintVertical_chainStyle="packed" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/view_group_tree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="18dp">

                    <View
                        android:id="@+id/view_tree_background"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/shape_circle"
                        android:backgroundTint="?attr/colorSecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="@+id/view_tree_background"
                        app:layout_constraintEnd_toEndOf="@+id/view_tree_background"
                        app:layout_constraintStart_toStartOf="@+id/view_tree_background"
                        app:layout_constraintTop_toTopOf="@+id/view_tree_background"
                        app:srcCompat="@drawable/nature_fill0_wght400_grad0_opsz24"
                        app:tint="?attr/colorOnSecondary" />

                    <TextView
                        android:id="@+id/text_tree_collected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/tree_collected"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintBottom_toTopOf="@+id/text_tree_collected_label"
                        app:layout_constraintStart_toEndOf="@+id/view_tree_background"
                        app:layout_constraintTop_toTopOf="@+id/view_tree_background"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/text_tree_collected_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily_goal_reached"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        app:layout_constraintBottom_toBottomOf="@+id/view_tree_background"
                        app:layout_constraintStart_toStartOf="@+id/text_tree_collected"
                        app:layout_constraintTop_toBottomOf="@+id/text_tree_collected"
                        app:layout_constraintVertical_chainStyle="packed" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="?attr/colorTertiaryContainer"
            app:cardCornerRadius="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="18dp">

                <View
                    android:id="@+id/view_calorie_background"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/shape_circle"
                    android:backgroundTint="?attr/colorTertiary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    app:layout_constraintBottom_toBottomOf="@+id/view_calorie_background"
                    app:layout_constraintEnd_toEndOf="@+id/view_calorie_background"
                    app:layout_constraintStart_toStartOf="@+id/view_calorie_background"
                    app:layout_constraintTop_toTopOf="@+id/view_calorie_background"
                    app:srcCompat="@drawable/local_fire_department_fill0_wght400_grad0_opsz24"
                    app:tint="?attr/colorOnTertiary" />

                <TextView
                    android:id="@+id/text_calorie_burned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="2dp"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintBottom_toTopOf="@+id/text_calorie_burned_label"
                    app:layout_constraintStart_toEndOf="@+id/view_calorie_background"
                    app:layout_constraintTop_toTopOf="@+id/view_calorie_background"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="210 kcal" />

                <TextView
                    android:id="@+id/text_calorie_burned_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorie_burned"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintBottom_toBottomOf="@+id/view_calorie_background"
                    app:layout_constraintStart_toStartOf="@+id/text_calorie_burned"
                    app:layout_constraintTop_toBottomOf="@+id/text_calorie_burned"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="?attr/colorPrimaryContainer"
            app:cardCornerRadius="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="18dp">

                <View
                    android:id="@+id/view_distance_background"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/shape_circle"
                    android:backgroundTint="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    app:layout_constraintBottom_toBottomOf="@+id/view_distance_background"
                    app:layout_constraintEnd_toEndOf="@+id/view_distance_background"
                    app:layout_constraintStart_toStartOf="@+id/view_distance_background"
                    app:layout_constraintTop_toTopOf="@+id/view_distance_background"
                    app:srcCompat="@drawable/conversion_path_fill0_wght400_grad0_opsz24"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/text_distance_travelled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="2dp"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintBottom_toTopOf="@+id/text_distance_travelled_label"
                    app:layout_constraintStart_toEndOf="@+id/view_distance_background"
                    app:layout_constraintTop_toTopOf="@+id/view_distance_background"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="4.1 km" />

                <TextView
                    android:id="@+id/text_distance_travelled_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_travelled"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintBottom_toBottomOf="@+id/view_distance_background"
                    app:layout_constraintStart_toStartOf="@+id/text_distance_travelled"
                    app:layout_constraintTop_toBottomOf="@+id/text_distance_travelled"
                    app:layout_constraintVertical_chainStyle="packed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>